// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EC - Dropdown legacy Default renders correctly 1`] = `
<test>
  <div
    class="ecl-dropdown-legacy ecl-dropdown-legacy--padded"
    data-ecl-auto-init="DropdownLegacy"
  >
    <button
      aria-controls="dropdown-legacy-example-dropdown-content"
      class="ecl-button ecl-button--secondary ecl-dropdown-legacy__toggle"
      data-ecl-dropdown-legacy-toggle="true"
      type="button"
    >
      <span
        class="ecl-button__container"
      >
        <span
          class="ecl-button__label"
          data-ecl-label="true"
        >
          Dropdown button
        </span>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--fluid ecl-icon--rotate-180 ecl-button__icon ecl-button__icon--after"
          data-ecl-icon=""
          focusable="false"
        >
          <use
            xlink:href="static/icons.svg#ui--corner-arrow"
          />
        </svg>
      </span>
    </button>
    <div
      class="ecl-dropdown-legacy__content"
      hidden=""
      id="dropdown-legacy-example-dropdown-content"
    >
      <ul
        class="ecl-unordered-list ecl-unordered-list--no-bullet"
      >
        <li
          class="ecl-unordered-list__item"
        >
          <a
            class="ecl-link ecl-link--standalone"
            href="/example"
          >
            Jobs, growth and investment
          </a>
        </li>
        <li
          class="ecl-unordered-list__item"
        >
          <a
            class="ecl-link ecl-link--standalone"
            href="/example"
          >
            Digital single market
          </a>
        </li>
        <li
          class="ecl-unordered-list__item"
        >
          <a
            class="ecl-link ecl-link--standalone"
            href="/example"
          >
            Energy union and climate
          </a>
        </li>
      </ul>
    </div>
  </div>
</test>
`;

exports[`EC - Dropdown legacy Default renders correctly with extra attributes 1`] = `
<test>
  <div
    class="ecl-dropdown-legacy ecl-dropdown-legacy--padded"
    data-ecl-auto-init="DropdownLegacy"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <button
      aria-controls="dropdown-legacy-example-dropdown-content"
      class="ecl-button ecl-button--secondary ecl-dropdown-legacy__toggle"
      data-ecl-dropdown-legacy-toggle="true"
      type="button"
    >
      <span
        class="ecl-button__container"
      >
        <span
          class="ecl-button__label"
          data-ecl-label="true"
        >
          Dropdown button
        </span>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--fluid ecl-icon--rotate-180 ecl-button__icon ecl-button__icon--after"
          data-ecl-icon=""
          focusable="false"
        >
          <use
            xlink:href="static/icons.svg#ui--corner-arrow"
          />
        </svg>
      </span>
    </button>
    <div
      class="ecl-dropdown-legacy__content"
      hidden=""
      id="dropdown-legacy-example-dropdown-content"
    >
      <ul
        class="ecl-unordered-list ecl-unordered-list--no-bullet"
      >
        <li
          class="ecl-unordered-list__item"
        >
          <a
            class="ecl-link ecl-link--standalone"
            href="/example"
          >
            Jobs, growth and investment
          </a>
        </li>
        <li
          class="ecl-unordered-list__item"
        >
          <a
            class="ecl-link ecl-link--standalone"
            href="/example"
          >
            Digital single market
          </a>
        </li>
        <li
          class="ecl-unordered-list__item"
        >
          <a
            class="ecl-link ecl-link--standalone"
            href="/example"
          >
            Energy union and climate
          </a>
        </li>
      </ul>
    </div>
  </div>
</test>
`;

exports[`EC - Dropdown legacy Default renders correctly with extra class names 1`] = `
<test>
  <div
    class="ecl-dropdown-legacy ecl-dropdown-legacy--padded custom-class custom-class--test"
    data-ecl-auto-init="DropdownLegacy"
  >
    <button
      aria-controls="dropdown-legacy-example-dropdown-content"
      class="ecl-button ecl-button--secondary ecl-dropdown-legacy__toggle"
      data-ecl-dropdown-legacy-toggle="true"
      type="button"
    >
      <span
        class="ecl-button__container"
      >
        <span
          class="ecl-button__label"
          data-ecl-label="true"
        >
          Dropdown button
        </span>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--fluid ecl-icon--rotate-180 ecl-button__icon ecl-button__icon--after"
          data-ecl-icon=""
          focusable="false"
        >
          <use
            xlink:href="static/icons.svg#ui--corner-arrow"
          />
        </svg>
      </span>
    </button>
    <div
      class="ecl-dropdown-legacy__content"
      hidden=""
      id="dropdown-legacy-example-dropdown-content"
    >
      <ul
        class="ecl-unordered-list ecl-unordered-list--no-bullet"
      >
        <li
          class="ecl-unordered-list__item"
        >
          <a
            class="ecl-link ecl-link--standalone"
            href="/example"
          >
            Jobs, growth and investment
          </a>
        </li>
        <li
          class="ecl-unordered-list__item"
        >
          <a
            class="ecl-link ecl-link--standalone"
            href="/example"
          >
            Digital single market
          </a>
        </li>
        <li
          class="ecl-unordered-list__item"
        >
          <a
            class="ecl-link ecl-link--standalone"
            href="/example"
          >
            Energy union and climate
          </a>
        </li>
      </ul>
    </div>
  </div>
</test>
`;

exports[`EC - Dropdown legacy Default with missing input data and debug enabled it returns the right warning messages. 1`] = `
<test>
  <div
    class="ecl-dropdown-legacy ecl-dropdown-legacy--padded"
    data-ecl-auto-init="DropdownLegacy"
  >
    <button
      aria-controls="-dropdown-content"
      class="ecl-button ecl-button--secondary ecl-dropdown-legacy__toggle"
      data-ecl-dropdown-legacy-toggle="true"
      type="button"
    >
      <span
        class="ecl-button__container"
      >
        <span
          class="ecl-button__label"
          data-ecl-label="true"
        />
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--fluid ecl-icon--rotate-180 ecl-button__icon ecl-button__icon--after"
          data-ecl-icon=""
          focusable="false"
        >
          <use
            xlink:href="#ui--corner-arrow"
          />
        </svg>
        <!-- ################################################################################################################
    ecl2-compliance -->
        <div
          class="ecl2-compliance ecl-u-border-width-1 ecl-u-border-color-red ecl-u-border-style-solid ecl-u-ma-xs ecl-u-pr-s ecl-u-bg-white"
        >
          <p
            class="ecl-u-type-color-grey ecl-u-ml-m ecl-u-type-xs"
          >
            <b>
              [icon]
            </b>
             icon.name and icon.path cannot be empty.
          </p>
        </div>
      </span>
    </button>
    <!-- ################################################################################################################
    ecl2-compliance -->
    <div
      class="ecl2-compliance ecl-u-border-width-1 ecl-u-border-color-red ecl-u-border-style-solid ecl-u-ma-xs ecl-u-pr-s ecl-u-bg-white"
    >
      <p
        class="ecl-u-type-color-grey ecl-u-ml-m ecl-u-type-xs"
      >
        <b>
          [button--secondary]
        </b>
         "label" is mandatory
      </p>
    </div>
    <div
      class="ecl-dropdown-legacy__content"
      hidden=""
      id="-dropdown-content"
    >
      <ul
        class="ecl-unordered-list ecl-unordered-list--no-bullet"
      >
        <li
          class="ecl-unordered-list__item"
        >
          <a
            class="ecl-link ecl-link--standalone"
            href="/example"
          >
            Jobs, growth and investment
          </a>
        </li>
        <li
          class="ecl-unordered-list__item"
        />
        <li
          class="ecl-unordered-list__item"
        >
          <a
            class="ecl-link ecl-link--standalone"
            href="/example"
          >
            Energy union and climate
          </a>
        </li>
      </ul>
    </div>
  </div>
  <!-- ################################################################################################################
    ecl2-compliance -->
  <div
    class="ecl2-compliance ecl-u-border-width-1 ecl-u-border-color-red ecl-u-border-style-solid ecl-u-ma-xs ecl-u-pr-s ecl-u-bg-white"
  >
    <p
      class="ecl-u-type-color-grey ecl-u-ml-m ecl-u-type-xs"
    >
      <b>
        [dropdown-legacy]
      </b>
        "id" is mandatory as it is needed to make the component work. "button.icon.path" is mandatory as it is needed to retrieve the icons sprite. "button.label" is mandatory. Each item in the "items" array defined in the "list" object needs to contain a "label" property set and filled in.
    </p>
  </div>
</test>
`;
